--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@babel/core": "^7.12.3",
     "@babel/eslint-parser": "^7.12.1",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@storybook/addon-a11y": "^6.0.26",
@@ -48,6 +51,8 @@
     "@storybook/react": "^6.0.26",
     "@storybook/source-loader": "^6.0.26",
     "@storybook/theming": "^6.0.26",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
     "@types/enzyme": "^3.10.7",
     "@types/jest": "^26.0.15",
     "@types/prop-types": "^15.7.3",
